2020-04-12  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/i386/indirect-thunk-1.c: Adjust for fno-common
	change, removing indirections for vars in .data.
	* gcc.target/i386/indirect-thunk-2.c: Likewise.
	* gcc.target/i386/indirect-thunk-3.c: Likewise.
	* gcc.target/i386/indirect-thunk-4.c: Likewise.
	* gcc.target/i386/indirect-thunk-attr-1.c: Likewise.
	* gcc.target/i386/indirect-thunk-attr-2.c: Likewise.
	* gcc.target/i386/indirect-thunk-attr-3.c: Likewise.
	* gcc.target/i386/indirect-thunk-attr-4.c: Likewise.
	* gcc.target/i386/indirect-thunk-attr-5.c: Likewise.
	* gcc.target/i386/indirect-thunk-attr-6.c: Likewise.
	* gcc.target/i386/indirect-thunk-extern-1.c: Likewise.
	* gcc.target/i386/indirect-thunk-extern-2.c: Likewise.
	* gcc.target/i386/indirect-thunk-extern-3.c: Likewise.
	* gcc.target/i386/indirect-thunk-extern-4.c: Likewise.
	* gcc.target/i386/indirect-thunk-inline-1.c: Likewise.
	* gcc.target/i386/indirect-thunk-inline-2.c: Likewise.
	* gcc.target/i386/indirect-thunk-inline-3.c: Likewise.
	* gcc.target/i386/indirect-thunk-inline-4.c: Likewise.

2020-04-11  Marek Polacek  <polacek@redhat.com>

	PR c++/86327
	* g++.dg/cpp1y/constexpr-return5.C: New test.

2020-04-11  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/94494
	* gcc.target/i386/pr94494.c: New test.

2020-04-11  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/94482
	* gcc.dg/torture/pr94482.c: Add -Wno-psabi -w.  Don't add -msse
	and sse_runtime effective target on x86, instead only add -msse2
	if target is sse2_runtime.

2020-04-10  Iain Sandoe  <iain@sandoe.co.uk>

	PR c++/94528
	* g++.dg/coroutines/pr94528.C: New test.

2020-04-10  Marek Polacek  <polacek@redhat.com>

	PR c++/94149
	* g++.dg/cpp2a/paren-init24.C: New test.
	* g++.dg/cpp2a/paren-init25.C: New test.
	* g++.dg/ext/is_constructible5.C: New test.

2020-04-10  Fritz Reese  <foreese@gcc.gnu.org>

	* gfortran.dg/asynchronous_5.f03: Fix typo in testcase and add
	IMPLICIT NONE.

2020-04-10  Fritz Reese  <foreese@gcc.gnu.org>
