@@ -1,3 +1,8 @@
+2020-04-12  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/94091
+	* gfortran.dg/char_length_22.f90: New test.
+
 2020-04-12  Iain Sandoe  <iain@sandoe.co.uk>
 
 	* gcc.target/i386/indirect-thunk-1.c: Adjust for fno-common
